RESOLVED FIXED24782
CSS clip with auto values broken
https://bugs.webkit.org/show_bug.cgi?id=24782
Summary CSS clip with auto values broken
Simon Fraser (smfr)
Reported 2009-03-24 12:38:30 PDT
The fix for bug 24753 broke css clip with auto values.
Attachments
Patch, changelog (7.04 KB, patch)
2009-03-24 13:40 PDT, Simon Fraser (smfr)
mitz: review+
Simon Fraser (smfr)
Comment 1 2009-03-24 12:39:17 PDT
This breakage shows in two tests: fast/clip/016.html fast/clip/outline-overflowClip.html
Simon Fraser (smfr)
Comment 2 2009-03-24 13:40:10 PDT
Created attachment 28909 [details] Patch, changelog
mitz
Comment 3 2009-03-24 13:43:32 PDT
Comment on attachment 28909 [details] Patch, changelog > - left = Length(rect->left()->computeLengthIntForLength(style(), zoomFactor), Fixed); > + > + top = convertToLength(rect->top(), style(), zoomFactor); You are adding extra whitespace there. r=me
Simon Fraser (smfr)
Comment 4 2009-03-24 13:46:34 PDT
Note You need to log in before you can comment on or make changes to this bug.